@@ -33,7 +33,9 @@ package org.antlr.v4.runtime.tree;
 import org.antlr.v4.runtime.Parser;
 import org.antlr.v4.runtime.Token;
 import org.antlr.v4.runtime.misc.Interval;
+import org.antlr.v4.runtime.tree.xpath.XPath;
 
+import java.util.Collection;
 import java.util.List;
 
 public class TerminalNodeImpl implements TerminalNode {
@@ -66,8 +68,14 @@ public class TerminalNodeImpl implements TerminalNode {
 	public int getChildCount() { return 0; }
 
 	@Override
-	public List<? extends ParseTree> getChildren() {
+	public List<ParseTree> getChildren() {
 		return null;
+	}
+
+	@Override
+	public Collection<ParseTree> findAll(Parser parser, String xpath) {
+		XPath p = new XPath(parser, xpath);
+		return p.evaluate(this);
 	}
 
 	@Override
