@@ -3,6 +3,8 @@ ANTLR v4 Honey Badger
 September 11, 2013
 
 * Copy lots of find node stuff from v3 GrammarAST to Trees class in runtime.
+* Add to ParseTree [BREAKING CHANGE]:
+	Collection<ParseTree> findAll(String xpath);
 
 September 10, 2013
 
